--- a/src/Section/style.css
+++ b/src/Section/style.css
@@ -1,9 +1,9 @@
 .section {
-    margin: 0px 5px 5px 5px;
+    margin: 0 5px 5px;
 }
 
 .section__header {
-    margin: 0px 0px 1px 0px;
+    margin: 0 0 1px;
     padding: 15px;
     background: white;
     font-size: 17px;
